# another_raytracer

./: .gitignore  CMakeLists.txt  README.md
DerivedData/ModuleCache.noindex/: Session.modulevalidation
DerivedData/SymbolCache.noindex/MacOSX12.3.sdk (21E226)/Auxiliary/Swift/: main.plist
DerivedData/SymbolCache.noindex/MacOSX12.3.sdk (21E226)/Auxiliary/_Concurrency/: main.plist
DerivedData/SymbolCache.noindex/MacOSX12.3.sdk (21E226)/Frameworks/CFNetwork/: main.plist  swift-imported.plist
DerivedData/SymbolCache.noindex/MacOSX12.3.sdk (21E226)/Frameworks/Combine/: swift-overlay.plist
DerivedData/SymbolCache.noindex/MacOSX12.3.sdk (21E226)/Frameworks/CoreFoundation/: main.plist  swift-imported.plist  swift-overlay.plist
DerivedData/SymbolCache.noindex/MacOSX12.3.sdk (21E226)/Frameworks/CoreGraphics/: main.plist  swift-imported.plist  swift-overlay.plist
DerivedData/SymbolCache.noindex/MacOSX12.3.sdk (21E226)/Frameworks/CoreServices/: main.plist  swift-imported.plist
DerivedData/SymbolCache.noindex/MacOSX12.3.sdk (21E226)/Frameworks/Foundation/: main.plist  swift-imported.plist  swift-overlay.plist
DerivedData/SymbolCache.noindex/MacOSX12.3.sdk (21E226)/Frameworks/IOKit/: main.plist  metadata.plist  swift-imported.plist  swift-overlay.plist
DerivedData/SymbolCache.noindex/MacOSX12.3.sdk (21E226)/Frameworks/Security/: main.plist  swift-imported.plist
DerivedData/SymbolCache.noindex/MacOSX12.3.sdk (21E226)/usr-include/Darwin/: main.plist  swift-imported.plist  swift-overlay.plist
DerivedData/SymbolCache.noindex/MacOSX12.3.sdk (21E226)/usr-include/Dispatch/: main.plist  swift-imported.plist  swift-overlay.plist
DerivedData/SymbolCache.noindex/MacOSX12.3.sdk (21E226)/usr-include/ObjectiveC/: main.plist  swift-imported.plist  swift-overlay.plist
DerivedData/SymbolCache.noindex/MacOSX12.3.sdk (21E226)/usr-include/libkern/: main.plist  swift-imported.plist
DerivedData/SymbolCache.noindex/MacOSX12.3.sdk (21E226)/usr-include/os/: main.plist  swift-imported.plist  swift-overlay.plist
DerivedData/SymbolCache.noindex/MacOSX12.3.sdk (21E226)/usr-include/os_object/: main.plist  swift-imported.plist
DerivedData/SymbolCache.noindex/MacOSX12.3.sdk (21E226)/usr-include/os_workgroup/: main.plist  swift-imported.plist
DerivedData/raycaster/: info.plist
DerivedData/raycaster/Index.noindex/: build-description.json
DerivedData/raycaster/Index.noindex/DataStore/v5/units/: main.o-BLONUBBWL7PX  vec3.o-2ORU4XG44I7ZI
DerivedData/raycaster/Logs/Launch/: LogStoreManifest.plist
DerivedData/raycaster/Logs/Launch/Run-raycaster-2022.11.01_19-01-40-+0100.xcresult/: Info.plist
DerivedData/raycaster/Logs/Launch/Run-raycaster-2022.11.01_19-01-40-+0100.xcresult/Data/: data.0~IFzZLyg45JRTVjVQ4ETDuPiLE5RctdJiS-YagRKBkurcFFDXt40QMXq_q3A8NGvPTETxrtVWrp9qOdolP68pPw==  data.0~IVphmQl2-UR1ww81Bbu6k6NuNJsgRytI6-IVQqP0xhfHJeM8Csq3RHorXehFMFqwDwHGxKcNASa329y5SZ37kg==  data.0~RVrFBHuRciy9Q437m-1RKrt2GjV1NOopx1qdgmOaBLJhyQ1OBbw0FGlhEZHkhfrXP_c9XsggaXQhYm-G0APmgg==  (+3 more)
DerivedData/raycaster/Logs/Launch/Run-raycaster-2022.11.08_22-35-40-+0100.xcresult/: Info.plist
DerivedData/raycaster/Logs/Launch/Run-raycaster-2022.11.08_22-44-31-+0100.xcresult/: Info.plist
DerivedData/raycaster/Logs/Notices/: 0194DA64-DE14-4D58-949C-60A3B0823392.xcactivitylog  1CED611A-D733-466E-9813-E8B7A2A1E865.xcactivitylog  29D30F8F-0163-4401-9BF7-79F0017DDEE2.xcactivitylog  31BD5387-9507-4656-8911-AFEDD8A6C438.xcactivitylog  4B45F7B5-865F-425A-88CB-113EB26B603D.xcactivitylog  4DD21D61-30EE-42F8-89E1-2D74AFC1D730.xcactivitylog  6008D32C-8F7E-4278-B2ED-164389E6FEE9.xcactivitylog  60B0984B-0CC7-4E02-ACDC-547B1BBA1C04.xcactivitylog  84011B54-503E-4595-87D7-9E7F2E9923B2.xcactivitylog  8F1426C2-5495-4C3F-95B0-59C1A0958FC7.xcactivitylog  B427F90C-5CB0-41AD-B0F4-15B73C58C19F.xcactivitylog  B6C1602D-3B4D-4CE8-A99A-810DCBD171F0.xcactivitylog  BC2500A0-7B97-41AF-A0A3-44669091DD28.xcactivitylog  BD1DF8CD-31AD-4B97-873F-7ED4E0423C02.xcactivitylog  BDB6B38C-6000-41F3-BD65-C18D7585FA41.xcactivitylog  C343BB66-2A00-4151-AA50-65EA4426737E.xcactivitylog  D0991884-8042-4D63-9C21-F0E1F7AFFA0B.xcactivitylog  D42ECF55-F5DC-42CC-9414-AA9040592DF2.xcactivitylog  E3FF02B3-0687-46D7-8839-C5081DA04768.xcactivitylog  E45AFD5B-85B5-4935-B635-C735A293E48F.xcactivitylog  E8A9804C-D1D5-4CD7-A359-6786ED39A32F.xcactivitylog  F2B7E46D-B9CA-43FB-83D4-DD71CDA85606.xcactivitylog  LogStoreManifest.plist
DerivedData/raycaster/SymbolCache/: metadata.plist  project.plist
DerivedData/raycaster/TextIndex/: TextFragmentIndex-v8.idx
DerivedData/src/: info.plist
DerivedData/src/Index.noindex/: build-description.json
raycaster.xcodeproj/: project.pbxproj
raycaster.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
raycaster.xcodeproj/xcshareddata/xcschemes/: raycaster.xcscheme
raycaster.xcodeproj/xcuserdata/albertmurienne.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: aabb.h  aarect.h  bvh.h  camera.h  constant_medium.h  gui.cpp  gui.h  hittable.h  hittable_list.h  main.cpp  material.h  mesh.h  perlin.h  ray.h  ressources.h.in  rtweekend.h  scene_manager.cpp  scene_manager.h  sphere.h  texture.h  triangle.h  vec3.h
src/core/: color.h  frame_allocator.h  onb.h  pdf.h  ray.h  tracer_constants.h  vec3.h
src/engine/: camera.h  constant_medium.h  engine.h  hittable.cpp  hittable.h  hittable_list.cpp  hittable_list.h
src/primitives/: aabb.h  aarect.cpp  aarect.h  box.cpp  box.h  bvh.cpp  bvh.h  mesh.h  moving_sphere.h  sphere.h  triangle.h
src/rendering/: material.h  perlin.h  texture.h
src/utils/: gui.cpp  gui.h  imageio.cpp  imageio.h  rtweekend.h  threadpool.h  tracer_utils.h
(+155 files in other folders)
